--- a/index.html
+++ b/index.html
@@ -36,22 +36,33 @@
     </nav>
 
     <section id="top-banner">
-      <div class="row">
-        <div class="col-md-6 banner-text text-center">
+      <div class="row">      
+          <div class="col-md-6 banner-text text-center">
             <h2>Your Health,</h2>
             <h2>Our Profession.</h2>
-            <h3 class="text1 mt-4">At DCH Clinic, your health is our priority.</h3>
-        </div>
-        <div id="banner-img-con" class="col-md-6">
-          <img id="banner-img" src="images/nurse1.png" alt="nurse-pic">
-        </div>
+            <h3 class="text-muted mt-4">At DCH Clinic, your health is our priority.</h3>
+          </div>
+          <div id="banner-img-con" class="col-md-6">
+            <img id="banner-img" src="images/nurse1.png" alt="nurse-pic">
+          </div>   
       </div>
     </section>
-    
-    <section id="about-us">
-      <h2 class="text-center fs-1 text1">About Us</h2>
-      <h4 class="text1 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aliquam autem doloremque quo iusto quis nesciunt distinctio placeat hic unde? Provident saepe voluptatem cumque rem quisquam tempore aliquid. Nemo, distinctio!</h4>
-    </section>
+   
+    <div class="card my-5 p-md-5 m-md-5">
+      <div class="card-header fs-2 text1">
+        About Us
+      </div>
+      <div class="card-body">
+        <h5 class="card-title text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aliquam autem doloremque quo iusto quis nesciunt distinctio placeat hic unde? Provident saepe voluptatem cumque rem quisquam tempore aliquid. Nemo, distinctio!</h5>
+      </div>
+    </div>
+<!--
+      <section id="about-us" class="mt-5">
+      <h2 class="text-center fs-1 text1">ABOUT US</h2>
+      <h4 class="text1 text-center p-5 text-serif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aliquam autem doloremque quo iusto quis nesciunt distinctio placeat hic unde? Provident saepe voluptatem cumque rem quisquam tempore aliquid. Nemo, distinctio!</h4>
+      </section>
+-->
+
 
     <section class="text1 text-center" id="services">
       <h2 class="fs-1">Services</h2>
