--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </div>
     </section>
    
-    <div class="card my-5 p-md-5 m-md-5">
-      <div class="card-header fs-2 text1">
+    <div class="card p-md-5 m-md-2">
+      <div class="card-header fs-2 text-danger fw-bold">
         About Us
       </div>
       <div class="card-body">
@@ -63,30 +63,51 @@
       </section>
 -->
 
+<img id="img-srvs" src="images/img-srvs2.jpg" alt="services image">
 
-    <section class="text1 text-center" id="services">
-      <h2 class="fs-1">Services</h2>
+    <section class="text1" id="services">
+      <div class="d-flex justify-content-center mt-3">
+        <h2 class="stylize1">SERVICES</h2>
+      </div>
+      <h3 class="mt-md-3 text-center text-secondary">Our friendly therapists will guide you and provide the best service we can offer.</h3>
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <img class="container-fluid" src="images/pt-1.jpg" alt="pt-image">
+        </div>
+        <div class="srvcs-list mt-5 col-md-6">
+          <h3>We offer both traditional and specialized physical therapy services that meet your needs.</h3>
+          <ul>
+            <li>Cardiovascular and pulmonary</li>
+            <li>Clinical electrophysiology</li>
+            <li>Geriatric</li>
+            <li>Wound management</li>
+            <li>Neurology</li>
+            <li>Orthopaedics</li>
+            <li>Pediatrics</li>
+            <li>Oncology</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
-    <section class="text1 text-center" id="services">
-      <h2 class="fs-1">Our Specialty Doctors</h2>
+    <section id="doctors">
+      <div class="d-flex justify-content-center mt-3">
+        <h2 class="stylize1">Our Specialty Doctors</h2>
+      </div>
     </section>
 
-    <section class="text1 text-center" id="services">
-      <h2 class="fs-1">Service Facilities</h2>
+    <section id="facilities">
+      <div class="d-flex justify-content-center mt-3">
+        <h2 class="stylize1">Service Facilities</h2>
+      </div>
     </section>
 
-    <section class="text1 text-center" id="services">
-      <h2 class="fs-1">Gallery</h2>
+    <section id="contact">
+      <div class="d-flex justify-content-center mt-3">
+        <h2 class="stylize1">Contact Us</h2>
+      </div>
     </section>
 
-    <section class="text1 text-center" id="services">
-      <h2 class="fs-1">Where We Are</h2>
-    </section>
-
-    <section class="text1 text-center" id="services">
-      <h2 class="fs-1">Contact Us</h2>
-    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
