adding banner, footer, services

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <!-- FontAwesome CDN -->
     <script src="https://kit.fontawesome.com/a1d79e8ba2.js" crossorigin="anonymous"></script>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <!-- Local CSS -->
     <link rel="stylesheet" href="app.css">
-    <title>DCH Clinic</title>
+    <link rel="icon" href="images/logo.png">
+    <title>Mangoos Physical Therapy</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-info">
+  <div id="banner">
+    <p class="ps-2">Need an appointment? Call <span class="lead text-white">718-585-0888</span></p>
+  </div>
+    <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
-          <a class="navbar-brand ps-5 text-white" href="#">DCH CLINIC</a>
+          <a class="navbar-brand ps-5 text-white" href="#"><img class="logo" src="images/logo.png" alt="logo"><span class="ms-2">Mangoos Physical Therapy</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,10 +44,10 @@
 
     <section id="top-banner">
       <div class="row">      
-          <div class="col-md-6 banner-text text-center">
-            <h2>Your Health,</h2>
-            <h2>Our Profession.</h2>
-            <h3 class="text-muted mt-4">At DCH Clinic, your health is our priority.</h3>
+          <div class="col-md-6 banner-text text-left ps-3">
+            <h2>Bringing Exceptional Care</h2>
+            <h2>to our Community.</h2>
+            <h3 class="text-muted mt-4">Mangoos Physical Therapy Clinics</h3>
           </div>
           <div id="banner-img-con" class="col-md-6">
             <img id="banner-img" src="images/nurse1.png" alt="nurse-pic">
@@ -62,52 +69,97 @@
       <h4 class="text1 text-center p-5 text-serif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aliquam autem doloremque quo iusto quis nesciunt distinctio placeat hic unde? Provident saepe voluptatem cumque rem quisquam tempore aliquid. Nemo, distinctio!</h4>
       </section>
 -->
-
+<!--
 <img id="img-srvs" src="images/img-srvs2.jpg" alt="services image">
-
+-->
     <section class="text1" id="services">
       <div class="d-flex justify-content-center mt-3">
-        <h2 class="stylize1">SERVICES</h2>
+        <h2 class="stylize1 text-success">SERVICES</h2>
       </div>
-      <h3 class="mt-md-3 text-center text-secondary">Our friendly therapists will guide you and provide the best service we can offer.</h3>
+      <h3 class="text-center text-secondary fs-5">Our friendly therapists will guide you and provide the best service we can offer.</h3>
       <div class="row mt-5">
         <div class="col-md-6">
           <img class="container-fluid" src="images/pt-1.jpg" alt="pt-image">
         </div>
-        <div class="srvcs-list mt-5 col-md-6">
-          <h3>We offer both traditional and specialized physical therapy services that meet your needs.</h3>
-          <ul>
-            <li>Cardiovascular and pulmonary</li>
-            <li>Clinical electrophysiology</li>
-            <li>Geriatric</li>
-            <li>Wound management</li>
-            <li>Neurology</li>
-            <li>Orthopaedics</li>
-            <li>Pediatrics</li>
-            <li>Oncology</li>
-          </ul>
+        <div class="srvcs-list col-md-6">
+          <h5>Electrical Stimulation
+            <ul> 
+              <li>Transcutaneous Electrical Nerve Stimulation</li>
+              <li>Functional Electrical Stimulation</li>
+            </ul>
+          </h5>
+          <h5>Therapeutic Services</h5>
+          <h5>Therapeutic Exercises</h5>
+          <h5>Thermal Modalities
+            <ul> 
+              <li>Hot Moist Pack</li>
+              <li>Therapeutic Ultrasound</li>
+              <li>Cryotherapy</li>
+          </ul></h5>
+          <h5>Athletic Taping</h5>
+          <h5>Hand Therapy</h5>       
+          <h5>Post-Operative Therapy</h5>
+          <h5>Post-Operative Programs</h5>
+          <h5>Physical Therapy</h5>
+          <h5>Spine & Back Educational Programs</h5>
+          <h5>Sport Injury Rehabilitation</h5>
+          <h5>Work Injury Rehabilitation</h5>
+        </div>
+      </div>
+      <div class="ms-5">
+        <h2>SPECIALTIES</h2>
+        <div>
+          <h5>AC Joint Injuries</h5>
+          <h5>Achilles Tendinities - Achilles Insertional Calcific Tendinopathy (ACIT)</h5>
+          <h5>Achilles Tendon Rupture</h5>
+          <h5>Achilles Tendonitis</h5>
+          <h5>ACL Injuries</h5>
+          <h5>Ankle Fracture Surgery</h5>
+          <h5>Ankle Fractures (Broken Ankle)</h5>
+          <h5>Ankle Fusion Surgery</h5>
+          <h5>Anterior Cervical Corpectomy & Discectomy</h5>
+          <h5>Arthritis & Adult Reconstruction Surgery</h5>
+          <h5>Arthroscopic Articular Cartilage Repair</h5>
+          <h5>Arthroscopic Chondrosplasty</h5>
+          <h5>Arthroscopic Debridement of the Elbow</h5>
+          <h5>Arthroscopic Rotator Cuff Repair</h5>
+          <h5>Articular Cartilage Restoration</h5>
+          <h5>Artificial Disk Replacement (ADR)</h5>
+          <h5>Aspiration of the Olecranon Bursa</h5>
+          <h5>Atraumatic Shoulder Instability</h5>
+          <h5>Avascular Necrosis (Osteonecrosis)</h5>
+          <h5>Bankart Repair</h5>
+          <h5>Bicep Tendon Tear</h5>
         </div>
       </div>
     </section>
 
     <section id="doctors">
       <div class="d-flex justify-content-center mt-3">
-        <h2 class="stylize1">Our Specialty Doctors</h2>
+        <h2 class="stylize1 text-success">Our Specialty Doctors</h2>
       </div>
     </section>
 
     <section id="facilities">
       <div class="d-flex justify-content-center mt-3">
-        <h2 class="stylize1">Service Facilities</h2>
+        <h2 class="stylize1 text-success">Service Facilities</h2>
       </div>
     </section>
 
     <section id="contact">
       <div class="d-flex justify-content-center mt-3">
-        <h2 class="stylize1">Contact Us</h2>
+        <h2 class="stylize1 text-success">Contact Us</h2>
       </div>
     </section>
 
+    <footer class="text-muted">
+      <p>&#169; Mangoos Physical Therapy</p>
+      <p>825 Walton Ave, Bronx, NY 10451</p>
+      <p>Tel# 718-585-0888</p>
+      <p>Fax# 718-585-0880</p>
+      <p>Email: mangoosphysicaltherapy@gmail.com</p>
+      <p>Office Hours: Monday-Friday 10AM-6PM</p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
