--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
  
 <div class="row justify-content-center">
-  <div class="card p-md-5 m-md-5">
+  <div class="card p-md-5 m-5">
     <div class="card-header fs-2 text-danger fw-bold">
       About Us
     </div>
