change about us

--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
     </section>
 
 <div id="about-us-anchor"></div>
-
 <div class="row justify-content-center bg-light">
   <div class="card p-md-5 m-5">
-    <div id="about-us" class="card-header fs-2 text-danger fw-bold">
-      About Us
+    <div id="about-us" class="card-header fs-1 text-danger fw-bold">
+      About Mangoos Physical Therapy
     </div>
     <div class="card-body">
-      <h5 class="card-title text-muted">Mangoos Physical Therapy (MPT) is a full service Orthopedic and Sports Physical Therapy private practice. We offer top-tier care for all orthopedic, sports, accident and work related injuries and conditions. MPT specializes in Workers Compensation, No Fault claims and Personal Injury cases. Our administrative staff also works closely with the injured person's physician, attorney and insurance company allowing the individual to focus entirely on his or her complete recovery. Unlike most clinics, we use a holistic approach to treat the whole person and not just their injury or condition. Our facility includes a physician, chiropractor and acupuncturist that enhance our therapy services. Our goal is to offer a natural non-invasive approach to healing by avoiding addictive drugs or unnecessary surgery. MPT offers a very convenient express door to door pick up service. Patients relax and ride comfortably in the care of our professional driver to and from their appointments.</h5>
+      <h5 class="card-title text-muted lh-base">Mangoos Physical Therapy (MPT) is a full service Orthopedic and Sports Physical Therapy private practice. We offer top-tier care for all orthopedic, sports, accident and work related injuries and conditions. MPT specializes in Workers Compensation, No Fault claims and Personal Injury cases. Our administrative staff also works closely with the injured person's physician, attorney and insurance company allowing the individual to focus entirely on his or her complete recovery. Unlike most clinics, we use a holistic approach to treat the whole person and not just their injury or condition. Our facility includes a physician, chiropractor and acupuncturist that enhance our therapy services. Our goal is to offer a natural non-invasive approach to healing by avoiding addictive drugs or unnecessary surgery. MPT offers a very convenient express door to door pick up service. Patients relax and ride comfortably in the care of our professional driver to and from their appointments.</h5>
     </div>
   </div>
 </div>
